# metric_coordinator

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api_client/: kafka_producer.py  nats_sub_client.py
src/metric_coordinator/: __init__.py  configs.py  main.py  metric_runner.py  model.py
src/metric_coordinator/api_client/: clickhouse_client.py  kafka_producer.py  mt5manager_client.py
src/metric_coordinator/data_emiter/: __init__.py  clickhouse_data_emiter.py  logging_data_emiter.py
src/metric_coordinator/data_retriever/: __init__.py  basic_data_retriever.py  clickhouse_data_retriever.py  mt5_data_retriever.py  test_mt5_retriever.py
src/metric_coordinator/datastore/: __init__.py  cache_datastore.py  clickhouse_datastore.py  local_datastore.py  mt5_datastore.py
src/metric_coordinator/datastore/metric_datastore/: mt5_deal_daily.py
tests/: conftest.py  test_data_retriever.py  test_datastore.py  test_emitter.py  test_metric_runner.py
tests/test_data/: account_metric_by_deal.csv  account_metric_daily.csv  account_symbol_metric_by_deal.csv  mt5_deal.csv  mt5_deal_daily.csv  mt5_deal_daily_large.csv  mt5_deal_daily_main.csv  mt5_deal_large.csv  mt5_deal_main.csv  position_metric_by_deal.csv
tests/test_data/perf_test/: auda_deals_truncated.csv  process_data.py
